--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -144,8 +144,8 @@ jobs:
       - name: sortlink
         run: ln -s /mnt/cache $HOME/
       
-      - name: check rclone isAvallable
-        run: rclone lsd cache
+#       - name: check rclone isAvailable
+#         run: rclone lsd cache:
 
       - name: Downloading binary objects cache to $HOME/cache
         run: rclone copy --fast-list --transfers=16 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
