--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -147,8 +147,8 @@ jobs:
 #       - name: check rclone isAvailable
 #         run: rclone lsd cache:
 
-      - name: Downloading binary objects cache to $HOME/cache
-        run: rclone copy --fast-list --transfers=16 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
+#       - name: Downloading binary objects cache to $HOME/cache
+#         run: rclone copy --fast-list --transfers=16 cache:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
 
       - name: Checking available disk-space after downloading cache
         run: df -h
