--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -148,7 +148,7 @@ jobs:
         run: ln -s /mnt/cache $HOME/
       
       - name: check rclone isAvailable
-        run: rclone lsd remote:
+        run: rclone ls remote:kiwibrowser-ccache-arm64
 
       - name: Downloading binary objects cache to $HOME/cache
         run: rclone copy --fast-list --transfers=16 remote:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
