--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -151,8 +151,8 @@ jobs:
 #       - name: check rclone isAvailable
 #         run: rclone ls remote:kiwibrowser-ccache-arm64
 
-#       - name: Downloading binary objects cache to $HOME/cache
-#         run: rclone copy --fast-list --transfers=16 remote:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
+      - name: Downloading binary objects cache to $HOME/cache
+        run: rclone copy --fast-list --transfers=16 remote:kiwibrowser-ccache-${{ matrix.platform }} $HOME/cache
 
       - name: Checking available disk-space after downloading cache
         run: df -h
